refactor UserService and UserSettingsController

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,19 @@
-address.successAddNewAddressMessage=Пользователь успешно добавил новый адрес!
-address.successChangeAddressMessage=Пользователь успешно изменил адрес с id:
-address.successDeletedAddressMessage=Адрес удален успешно! Адрес:
-address.errorSaveAddressMessage=Пользователю не удалось добавить новый адрес. Не известная ошибка!
-address.errorChangeAddressMessage=Пользователю не удалось изменить адрес. Не известная ошибка!
+address.successAddMessage=Пользователь успешно добавил новый адрес!
+address.successChangeMessage=Пользователь успешно изменил один из адресов.
+address.successDeletedMessage=Адрес удален успешно! Адрес:
+address.errorAddMessage=Пользователю не удалось добавить новый адрес. Не известная ошибка!
+address.errorChangeMessage=Пользователю не удалось изменить адрес. Не известная ошибка!
 address.errorObjectAreLocatedAddressEntityMessage=Ошибка удаления! По адресу зарегистрированы устройства или пользователи.
-address.errorDeleteAddressMessage=Ошибка удаления! Неизвестная ошибка.
+address.errorDeleteMessage=Ошибка удаления! Неизвестная ошибка.
 address.warningMutableObjectIdIsNullMessage=У изменяемого объекта id равен null.
-address.addressObjectHasIdMessage=Объект адреса имеет id. Для сохранения нового адреса id должен отсутствовать!
-address.addressAlreadyExistsMessage=Пользователю не удалось добавить новый адрес т.к. он уже существует!
+address.objectHasIdMessage=Объект адреса имеет id. Для сохранения нового адреса id должен отсутствовать!
+address.alreadyExistsMessage=Пользователю не удалось добавить новый адрес т.к. он уже существует!
+
+users.successAddMessage=Успешное добавление нового пользователя.
+users.successChangeMessage=Успешное изменение пользователя.
+users.successRemovedMessage=Успешное изменение пользователя. Пользователь помечен как удаленный.
+users.successDeletedMessage=Успешное удаление пользователя.
+users.errorAddMessage=Ошибка добавления пользователя. Не известная ошибка!
+users.errorChangeMessage=Ошибка изменения пользователя. Не известная ошибка!
+users.errorDeleteMessage=Ошибка удаления пользователя. Не известная ошибка!
+users.alreadyExistsMessage=Ошибка добавления! Такой пользователь уже существует.
