--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 address.successAddMessage=Пользователь успешно добавил новый адрес!
 address.successChangeMessage=Пользователь успешно изменил один из адресов.
-address.successDeletedMessage=Адрес удален успешно! Адрес:
+address.successDeletedMessage=Адрес удален успешно!
 address.errorAddMessage=Пользователю не удалось добавить новый адрес. Не известная ошибка!
 address.errorChangeMessage=Пользователю не удалось изменить адрес. Не известная ошибка!
 address.errorObjectAreLocatedAddressEntityMessage=Ошибка удаления! По адресу зарегистрированы устройства или пользователи.
@@ -17,3 +17,11 @@ users.errorAddMessage=Ошибка добавления пользователя
 users.errorChangeMessage=Ошибка изменения пользователя. Не известная ошибка!
 users.errorDeleteMessage=Ошибка удаления пользователя. Не известная ошибка!
 users.alreadyExistsMessage=Ошибка добавления! Такой пользователь уже существует.
+
+devices.successAddMessage=Успешное добавление нового устройства
+devices.successChangeMessage=Успешное изменение устройства
+devices.successDeletedMessage=Успешное удаление устройства
+devices.errorAddMessage=Ошибка добавления нового устройства
+devices.errorChangeMessage=Ошибка изменения устройства
+devices.errorDeleteMessage=Ошибка удаления устройства
+devices.alreadyExistsMessage=Ошибка добавления/изменения! Такое устройство уже существует!
