--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,31 +1,43 @@
-address.successAddMessage=Пользователь успешно добавил новый адрес!
-address.successChangeMessage=Пользователь успешно изменил один из адресов.
-address.successDeletedMessage=Адрес удален успешно!
-address.errorAddMessage=Пользователю не удалось добавить новый адрес. Не известная ошибка!
-address.errorChangeMessage=Пользователю не удалось изменить адрес. Не известная ошибка!
-address.errorObjectAreLocatedAddressEntityMessage=Ошибка удаления! По адресу зарегистрированы устройства или пользователи.
-address.errorDeleteMessage=Ошибка удаления! Неизвестная ошибка.
-address.warningMutableObjectIdIsNullMessage=У изменяемого объекта id равен null.
-address.objectHasIdMessage=Объект адреса имеет id. Для сохранения нового адреса id должен отсутствовать!
-address.alreadyExistsMessage=Пользователю не удалось добавить новый адрес т.к. он уже существует!
-
-users.successAddMessage=Успешное добавление нового пользователя.
+#address
+address.successAdditionMessage=Успешное добавление нового адреса.
+address.errorAddMessage=Не удалось добавить новый адрес! Неизвестная ошибка, обратитесь к разработчикам.
+address.successChangeMessage=Успешное изменение адреса.
+address.errorChangeMessage=Не удалось изменить адрес! Неизвестная ошибка, обратитесь к разработчикам.
+address.successDeletedMessage=Успешное удаление адреса.
+address.errorDeleteMessage=Ошибка удаления! Неизвестная ошибка, обратитесь к разработчикам.
+address.warningAlreadyExistsMessage=Не удалось добавить/изменить адрес т.к. он уже существует в программе!
+address.errorSomethingIsIndicatedMessage=Ошибка удаления! По адресу зарегистрированы устройства или пользователи.
+address.errorChangeNonExistentEntry=Не удалось изменить адрес! Попытка изменить не существующую запись.
+#user
+users.successAdditionMessage=Успешное добавление нового пользователя.
+users.errorAddMessage=Ошибка добавления пользователя! Неизвестная ошибка, обратитесь к разработчикам.
 users.successChangeMessage=Успешное изменение пользователя.
-users.successRemovedMessage=Успешное изменение пользователя. Пользователь помечен как удаленный.
+users.errorChangeMessage=Ошибка изменения пользователя! Неизвестная ошибка, обратитесь к разработчикам.
 users.successDeletedMessage=Успешное удаление пользователя.
-users.errorAddMessage=Ошибка добавления пользователя. Не известная ошибка!
-users.errorChangeMessage=Ошибка изменения пользователя. Не известная ошибка!
-users.errorDeleteMessage=Ошибка удаления пользователя. Не известная ошибка!
-users.alreadyExistsMessage=Ошибка добавления! Такой пользователь уже существует.
-
-devices.successAddMessage=Успешное добавление нового устройства
+users.errorDeleteMessage=Ошибка удаления пользователя! Неизвестная ошибка, обратитесь к разработчикам.
+users.warningAlreadyExistsMessage=Ошибка добавления! Такой пользователь уже существует.
+users.successRemovedMessage=Успешное изменение пользователя. Пользователь помечен как удаленный и больше не сможет войти в программу.
+#device
+devices.successAdditionMessage=Успешное добавление нового устройства
+devices.errorAddMessage=Ошибка добавления нового устройства! Неизвестная ошибка, обратитесь к разработчикам.
 devices.successChangeMessage=Успешное изменение устройства
+devices.errorChangeMessage=Ошибка изменения устройства! Неизвестная ошибка, обратитесь к разработчикам.
 devices.successDeletedMessage=Успешное удаление устройства
-devices.errorAddMessage=Ошибка добавления нового устройства
-devices.errorChangeMessage=Ошибка изменения устройства
-devices.errorDeleteMessage=Ошибка удаления устройства
-devices.alreadyExistsMessage=Ошибка добавления/изменения! Такое устройство уже существует!
-
-devicetype.successAddMessage=Успешное добавление типа.
-devicetype.alreadyExistsMessage=Ошибка добавления! Такой тип уже существует!
-devicetype.errorAddMessage=Ошибка добавления! Не известная ошибка!
+devices.errorDeleteMessage=Ошибка удаления устройства! Неизвестная ошибка, обратитесь к разработчикам.
+devices.warningAlreadyExistsMessage=Не удалось добавить/изменить устройство т.к. оно уже существует в программе!
+#type device
+devicetype.successAdditionMessage=Успешное добавление нового типа устройств.
+devicetype.errorAddMessage=Ошибка добавления нового типа устройств! Неизвестная ошибка, обратитесь к разработчикам.
+devicetype.successChangeMessage=Успешное изменение типа устройств.
+devicetype.errorChangeMessage=Ошибка изменения типа устройств! Неизвестная ошибка, обратитесь к разработчикам.
+devicetype.successDeletedMessage=Успешное удаление типа устройств.
+devicetype.errorDeleteMessage=Ошибка удаления типа устройств! Неизвестная ошибка, обратитесь к разработчикам.
+devicetype.warningAlreadyExistsMessage=Не удалось добавить/изменить типа устройств т.к. оно уже существует в программе!
+#manufacturer
+manufacturer.successAdditionMessage=Успешное добавление нового производителя устройств.
+manufacturer.errorAddMessage=Ошибка добавления нового производителя устройств! Неизвестная ошибка, обратитесь к разработчикам.
+manufacturer.successChangeMessage=Успешное изменение производителя устройств.
+manufacturer.errorChangeMessage=Ошибка изменения производителя устройств! Неизвестная ошибка, обратитесь к разработчикам.
+manufacturer.successDeletedMessage=Успешное удаление производителя устройств.
+manufacturer.errorDeleteMessage=Ошибка удаления производителя устройств! Неизвестная ошибка, обратитесь к разработчикам.
+manufacturer.warningAlreadyExistsMessage=Не удалось добавить/изменить производителя устройств т.к. оно уже существует в программе!
