Transition to Spring AOP. Part 4 - End. Added a new field to the device page (discharge date)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ users.successDeletedMessage=Успешное удаление пользоват
 users.errorDeleteMessage=Ошибка удаления пользователя! Неизвестная ошибка, обратитесь к разработчикам.
 users.warningAlreadyExistsMessage=Ошибка добавления! Такой пользователь уже существует.
 users.successRemovedMessage=Успешное изменение пользователя. Пользователь помечен как удаленный и больше не сможет войти в программу.
+users.errorRemovedMessage=Ошибка изменения пользователя! Пользователь пытался пометить пользователя как удаленного, но что-то пошло не так. Неизвестная ошибка, обратитесь к разработчикам.
 #device
 devices.successAdditionMessage=Успешное добавление нового устройства
 devices.errorAddMessage=Ошибка добавления нового устройства! Неизвестная ошибка, обратитесь к разработчикам.
